--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- icom mat CDN-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- iconmonstr CDN-->
-    <link href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" rel="stylesheet">
-    <!-- tailwindcss CDN-->
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Basic Vue Js - HelloWorld App</title>
+    
+    <!-- https://google.github.io/material-design-icons/#icon-font-for-the-web -->
+    <!-- Using via Google Web Fonts -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+    <!-- https://tailwindcss.com/docs/installation -->
+    <!-- Using Tailwind via CDN -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+
+    <!-- https://v3.vuejs.org/guide/installation.html#release-notes -->
+    <!-- Vue CDN -->
+    <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
-     <!-- icom mat -->
-    <i class="material-icons">
-        home
-    </i>
-
-    <!-- iconmonstr -->
-    <i class="im im-facebook-messenger"></i>
-
-    <!-- tailwindcss -->
-
-</body>
+    <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
+      <img src="./images/mountain-unsplash.jpg" class="w-1/3 h-full">
+      <div class="w-full flex items-center justify-end">
+        <i class="material-icons">face</i>
+        <p class="font-semibold text-xl tracking-wider uppercase px-3"> {{ msg }}</p>
+      </div>
+    </div>
+    <!-- my main.js -->
+    <script src="./main.js"></script>
+  </body>
 </html>
