--- a/index.html
+++ b/index.html
@@ -18,34 +18,13 @@
     <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
-    <div id="app" class="h-screen max-w-2xl bg-indigo-200 mx-auto">
-      <p class="text-pink-500	text-lg font-semibold">INTRODUCTION</p>
-      <h1 class="text-5xl font-extrabold ml-5">Tailwind srtoies.</h1>
-
-      <div class="flex justify-center item-center space-x-3">
-        <div class="rounded-full p-1 border bg-gradient-to-tr from-yellow-400 to-pink-500">
-          <button class="bg-white p-1 rounded-full">
-            <img class="h-24 w-24 rounded-full" src="https://images.unsplash.com/photo-1574158622682-e40e69881006?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="">
-          </button>
-        </div>
-        <div class="rounded-full p-1 border bg-gradient-to-tr from-yellow-400 to-pink-500">
-          <button class="bg-white p-1 rounded-full">
-            <img class="h-24 w-24 rounded-full" src="https://images.unsplash.com/photo-1490650034439-fd184c3c86a5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="">
-          </button>
-        </div>
-        <div class="rounded-full p-1 border bg-gradient-to-tr from-yellow-400 to-pink-500">
-          <button class="bg-white p-1 rounded-full">
-            <img class="h-24 w-24 rounded-full" src="https://images.unsplash.com/photo-1517213849290-bbbfffdc6da3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="">
-          </button>
-        </div>
-        <div class="rounded-full p-1 border bg-gradient-to-tr from-yellow-400 to-pink-500">
-          <button class="bg-white p-1 rounded-full">
-            <img class="h-24 w-24 rounded-full" src="https://images.unsplash.com/photo-1564539279948-9931a76c05be?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="">
-          </button>
-        </div>
+    <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
+      <img src="./images/mountain-unsplash.jpg" class="w-1/3 h-full">
+      <div class="w-full flex items-center justify-end">
+        <i class="material-icons">face</i>
+        <p class="font-semibold text-xl tracking-wider uppercase px-3"> {{ msg }}</p>
       </div>
-    </div>  
-
+    </div>
     <!-- my main.js -->
     <script src="./main.js"></script>
   </body>
