--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
     <script src="https://unpkg.com/vue@next"></script>
 </head>
 <body>
-    <div id="app" class="h-screen w-full bg-gray-200 flex items-start justify-start">
-      <img src="./images/mountain-unsplash.jpg" class="w-1/3 h-full">
-      <div class="w-full flex items-center justify-end">
-        <i class="material-icons">face</i>
+    <div id="app" class="p-8">
         <p class="font-semibold text-xl tracking-wider uppercase px-3"> {{ msg }}</p>
-      </div>
+        <p v-if="shown">You can see this message.</p>
+        <p v-show="shown">You can see this message.(v-show)</p>
+        <a v-bind:href="url">Please click here.</a>
     </div>
     <!-- my main.js -->
     <script src="./main.js"></script>
